--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "webpack serve --mode development --env development",
     "deploy:local": "dfx deploy --network=local",
     "deploy:ic": "dfx deploy --network=ic",
-    "generate": "dfx generate GuessTwoThirdsOfTheAverageGame_backend"
+    "generate": "dfx generate GuessTwoThirdsOfTheAverageGame_backend",
+    "prepare": "husky"
   },
   "dependencies": {
     "@dfinity/agent": "^0.21.4",
@@ -22,6 +23,8 @@
     "@dfinity/principal": "^0.21.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
