--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "deploy:local": "dfx deploy --network=local",
     "deploy:ic": "dfx deploy --network=ic",
     "generate": "dfx generate GuessTwoThirdsOfTheAverageGame_backend",
-    "prepare": "husky"
+    "prepare": "husky",
+    "release": "standard-version"
   },
   "dependencies": {
     "@dfinity/agent": "^0.21.4",
@@ -32,6 +33,7 @@
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
     "process": "0.11.10",
+    "standard-version": "^9.5.0",
     "stream-browserify": "3.0.0",
     "terser-webpack-plugin": "^5.3.3",
     "util": "0.12.4",
