--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@dfinity/agent": "^0.21.4",
+    "@dfinity/auth-client": "^0.21.4",
     "@dfinity/candid": "^0.21.4",
     "@dfinity/principal": "^0.21.4"
   },
